# AutonomousRB5

./: CMakeLists.txt  README.md  main.c  main.py
include/: constant.h  featureExtraction.h  network.h  process.h  wavHeader.h
model/: model.onnx
src/: autonomous_rb5.py
